syntax = "proto3";

option go_package = "github.com/zerops-io/zcli/src/zeropsVpnProtocol";

package zeropsVpnProtocol;

service ZeropsVpnProtocol {
    rpc startVpn (startVpnRequest) returns (startVpnResponse);
}

message error {
    errorCode code = 1;
    string message = 2;
}

enum errorCode {
    NO_ERROR = 0;
    INTERNAL_SERVER_ERROR = 1;
    INSTANCE_NOT_FOUND = 2;
    PROXY_IS_FULL = 3;
    INVALID_SIGNATURE = 4;
    EXPIRED_SIGNATURE = 5;
    MAX_PARALLEL_VPN_LIMIT = 6;
}

message IP {
    bytes address = 1;
}

message IPRange {
    bytes ip = 1;
    bytes mask = 2;
}

message Timestamp {
    bool isSet = 1;
    int64 seconds = 2;
    int32 nanos = 3;
}

message startVpnRequest {
    string instanceId = 1;
    string userId = 2;
    string clientPublicKey = 3;
    string signature = 4;
    Timestamp expiry = 5;
}

message startVpnResponse {
    error error = 1;
    startVpnOutDto vpn = 2;
}

message startVpnOutDto {
    int64 port = 1;
    string serverPublicKey = 2;
    IP assignedClientIp = 3;
    IP serverIp = 4;
    IPRange vpnIpRange = 5;
    IP dnsIp = 6;
}
